# xdg-utils-cxx

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml
cmake/: ConfigurePackage.cmake  XdgUtilsConfig.cmake.in  code_coverge_config.cmake  generate_cmake_package.cmake  module_utils.cmake
include/XdgUtils/BaseDir/: BaseDir.h
include/XdgUtils/DesktopEntry/: DesktopEntry.h  DesktopEntryExecValue.h  DesktopEntryKeyPath.h  DesktopEntryKeyValue.h  DesktopEntryStringList.h  DesktopEntryStringsValue.h  Exceptions.h
package/cmake/: XdgUtilsConfig.cmake.in
src/: CMakeLists.txt
src/BaseDir/: BaseDir.cpp  CMakeLists.txt
src/DesktopEntry/: CMakeLists.txt  DesktopEntry.cpp  DesktopEntryExecValue.cpp  DesktopEntryKeyPath.cpp  DesktopEntryKeyValue.cpp  DesktopEntryKeyValuePriv.h  DesktopEntryStringList.cpp  DesktopEntryStringsValue.cpp  README.md
src/DesktopEntry/AST/: AST.cpp  AST.h  CMakeLists.txt  Comment.cpp  Comment.h  Entry.cpp  Entry.h  Group.cpp  Group.h  Node.cpp  Node.h
src/DesktopEntry/Reader/: CMakeLists.txt  Errors.h  Lexer.cpp  Lexer.h  Reader.cpp  Reader.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
src/desktop_entry/: CMakeLists.txt
src/desktop_entry/AST/: AST.cpp  AST.h  CMakeLists.txt  Comment.cpp  Comment.h  Entry.cpp  Entry.h  Group.cpp  Group.h  Node.h
src/desktop_entry/reader/: CMakeLists.txt  Errors.h  Lexer.cpp  Lexer.h  Reader.cpp  Reader.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
tests/: CMakeLists.txt  fetch_and_build_gtest.cmake  setup_coverage_target.cmake  utils.cmake
tests/BaseDir/: CMakeLists.txt  TestBaseDir.cpp
tests/DesktopEntry/: CMakeLists.txt  TestDesktopEntry.cpp  TestDesktopEntryExecValue.cpp  TestDesktopEntryKeyPath.cpp  TestDesktopEntryStringList.cpp  TestDesktopEntryStringsValue.cpp  TestDesktopEntryValue.cpp
tests/DesktopEntry/AST/: CMakeLists.txt  TestAST.cpp  TestComment.cpp  TestEntry.cpp  TestGroup.cpp
tests/DesktopEntry/Reader/: CMakeLists.txt  TestDesktopEntryReader.cpp  TestDesktopEntryReaderLexer.cpp  TestDesktopEntryReaderTokenizer.cpp
tests/cmake/: EnableGoogleTest.cmake  GTestRemoteCMakeLists.txt.in  fetch_gtest.cmake
tests/desktop_entry/: CMakeLists.txt
tests/desktop_entry/AST/: CMakeLists.txt  TestAST.cpp  TestComment.cpp  TestEntry.cpp  TestGroup.cpp
tests/desktop_entry/reader/: CMakeLists.txt  TestDesktopEntryReader.cpp  TestDesktopEntryReaderLexer.cpp  TestDesktopEntryReaderTokenizer.cpp
